src/styles/_base.scss
/* ... */
html {
  background: var(--bg);
  background: var(--color-of-the-day);
  font-size: 16px;
}

html,
body {
  background: var(--bg);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  outline: 2px solid transparent;
  outline-offset: 2px;

  &:focus-visible {
    outline-color: var(--green);
  }
}

body {
  min-height: 100vh;
  margin: 0;
  color: var(--fg);
  font-weight: 300;
  font-size: 16px;
  font-family: var(--body);
}

pre,
code {
  font-family: var(--mono);
}

pre {
  font-size: 1rem;
  margin-right: -1.5rem;
  margin-left: -1.5rem;
  background: var(--bg-accent);
  box-shadow: inset 2px 0 0 currentColor;
}

code {
  display: inline-block;
  font-size: var(--d2);
  padding: 0.25em 0.5em;
  font-size: 1em;
  background: var(--bg-accent);
}

pre code {
  display: block;
  padding: 1.5rem;
  overflow-x: auto;
  line-height: 1.5;
}

img,
svg,
video {
  max-width: 100%;
  height: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  position: relative;
  font-weight: 400;
  font-family: var(--heading);
  letter-spacing: -0.01em;
  line-height: 1.2;

  &:hover .zola-anchor {
    opacity: 1;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
  margin: 2rem 0;

  &:first-child {
    margin-top: 0;
  }

  &:last-child {
    margin-bottom: 0;
  }
}

h1 {
  font-size: var(--u4);

  @media (min-width: 600px) {
    font-size: var(--u8);
  }
}

h2 {
  font-size: var(--u3);

  @media (min-width: 600px) {
    font-size: var(--u5);
  }
}

h3 {
  font-size: var(--u4);
}

a {
  color: var(--green);
}

svg {
  fill: currentColor;
}

b,
strong {
  font-weight: 600;
}

i,
em {
  font-style: italic;
}

abbr {
  border-bottom: 1px dashed var(--gray-50);
  text-decoration: none;
}

blockquote {
  background-color: var(--gray-20);
  font-size: 1em;
  font-style: italic;
  font-weight: 300;
  margin: 0 -2rem;
  padding: 1rem 2rem;

  p {
    line-height: 1.25;
  }
}

p {
  margin: 1.25em 0;
  line-height: 1.75;
}

time {
  display: block;
  font-weight: 500;
  font-size: var(--d1);
  letter-spacing: 0.0375em;
  white-space: nowrap;
  text-transform: uppercase;
}

strike {
  opacity: 0.7;
}

table {
  width: 100%;
  margin: 2em 0;
  font-size: var(--d1);
  border-collapse: collapse;
}

td,
th {
  padding: 0.5rem 0.5rem;
  text-align: left;
  vertical-align: top;

  &:first-child {
    padding-left: 0;
  }

  &:last-child {
    padding-right: 0;
  }

  &[align="center"] {
    text-align: center;
  }

  &[align="right"] {
    text-align: right;
  }
}

td {
  border-top: 1px solid var(--border);
}

th {
  font-weight: 400;
  font-size: 1em;
  font-family: var(--heading);
}

ol,
ul {
  margin: 2em 0;
  padding: 0 1em;
}

ol {
  list-style-type: upper-roman;
}

ul {
  list-style-type: "‒";
}

li {
  line-height: 1.5;
  margin-bottom: 1rem;
  margin-left: -0.5em;
  padding-left: 0.5em;
}

figure {
  margin: 2rem -1.5rem;
  padding: 1.5rem;
  background: var(--bg-accent);
}

.figure-group {
  figure {
    margin-left: 0;
    margin-right: 0;
  }
}

figcaption {
  margin: 0;
  padding-top: 1.25rem;
  font-size: var(--d1);
  font-style: italic;
  line-height: 1.75;
}

hr {
  border-width: 1px 0 0 0;
  border-top: 1px solid var(--border);
  margin: 3rem 0;
}

figcaption,
em,
i {
  em,
  i {
    font-style: normal;

    em,
    i {
      font-style: italic;

      em,
      i {
        font-style: normal;
      }
    }
  }
}

math {
  background: var(--bg-accent);
  display: block;
  font-size: 1.25rem;
  text-align: center;
  padding: 2em 0;
  margin: 2em 0;
  width: 100%;
}

